Add single card
